--- a/src/main/webapp/WEB-INF/views/index.jade
+++ b/src/main/webapp/WEB-INF/views/index.jade
@@ -1,5 +1,7 @@
 -@ val generatedSentences: Seq[String]
 
-h2 Generate
+h2
+  | Generate
+  button.btn.btn-primary(onClick="window.location.reload()") Reload
 - for (sentence <- generatedSentences)
   p= sentence
