--- a/src/main/webapp/WEB-INF/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/layouts/default.jade
@@ -41,6 +41,8 @@ html
       .modal-header
         h3#learnModalLabel Learn
       .modal-body.container-fluid
-        textarea.span6(rows="8")
+        textarea.span6.learn_text(rows="8")
       .modal-footer
-        button.btn.btn-primary Save
+        button.btn.btn-primary#learn-save Save
+
+    script(src="js/main.js" language="javascript")
